Hot fix, z-index

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -6,7 +6,7 @@ header {
 	margin: 0 auto;
 	background: #fff;
 	position: relative;
-	z-index: 10001;
+	z-index: 10002;
 	&.js-width {
 		&:before,
 		&:after {
